[package]
name = "maps-validation"
version = "0.1.0"
edition = "2021"

[dependencies]
async-nats = "0.38.0"
futures = "0.3.31"
rbx_asset = { version = "0.2.3", registry = "strafesnet" }
rbx_binary = { version = "0.7.4", registry = "strafesnet"}
rbx_dom_weak = { version = "2.9.0", registry = "strafesnet"}
rbx_xml = { version = "0.13.3", registry = "strafesnet"}
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
sqlx = "0.8.2"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread", "fs"] }
